Fix long logs from pushing the 3D view offscreen

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -49,8 +49,13 @@ pre > code {
     min-height: 400px;
 }
 
+.column {
+    min-width: 0;
+}
+
 .column.fixed {
     width: auto;
+    min-width: auto;
     flex: 0;
 }
 
